<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".CompleteRegistration">

  <include layout="@layout/toolbar"
    android:id="@+id/share_new_book_toolbar"
    />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp">


    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColorHint="@color/colorPrimaryText"
      android:textColor="@color/colorPrimaryTitle"
      android:hint="@string/insert_isbn">

      <EditText
        android:paddingVertical="10dp"
        android:id="@+id/share_new_book_ISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimaryText"
        android:textColor="@color/colorPrimaryText"
        android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/or"
      android:paddingVertical="10dp"
      android:textColor="@color/colorPrimaryText"/>

    <Button
      android:id="@+id/share_new_book_scan"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@drawable/rounded_corner_button"
      android:padding="10dp"
      android:text="@string/scan_qr"
      android:textColor="@color/white" />

  </LinearLayout>

</LinearLayout>