<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/primaryDark"
  android:orientation="vertical"
  tools:context=".ShareNewBook">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingVertical="20dp"
      android:text="@string/activity_complete_profile"
      android:textColor="@color/onPrimary"
      android:textSize="45sp"
      android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      android:textColor="@color/onPrimary"
      android:textColorHint="@color/onPrimary">

      <EditText
        android:id="@+id/complete_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/onPrimary"
        app:backgroundTint="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/bio"
      android:textColorHint="@color/onPrimary"
      app:counterEnabled="true"
      app:counterMaxLength="140">

      <EditText
        android:id="@+id/complete_biography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:textColor="@color/onPrimary"
        app:backgroundTint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <!--<android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="Your location"
      android:textColor="@color/white"
      android:textColorHint="@color/white">

      <AutoCompleteTextView
          android:id="@+id/complete_location"
          android:inputType="text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"
          app:backgroundTint="@color/white"/>
    </android.support.design.widget.TextInputLayout>-->

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="top"
      android:layout_marginBottom="5dp"
      android:layout_marginLeft="5dp"
      android:layout_marginStart="5dp"
      android:layout_marginTop="5dp"
      android:gravity="start"
      android:text="@string/location"
      android:textColor="@color/accent"
      android:textSize="13sp" />

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/explanationLocationRegistration"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="3dp"
        android:backgroundTint="@color/surface">

        <fragment
          android:id="@+id/complete_location"
          android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="bottom" />

      </android.support.v7.widget.CardView>


      <ImageButton
        android:id="@+id/explanationLocationRegistration"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:background="@color/primaryDark"
        android:clickable="true"
        app:srcCompat="@drawable/ic_help_24dp" />

    </RelativeLayout>


    <Button
      android:id="@+id/complete_registration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:background="@drawable/rounded_corner_button"
      android:padding="10dp"
      android:text="✔️"
      android:textColor="@color/white" />
  </LinearLayout>

</LinearLayout>