<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteReview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/write_review_card"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            android:elevation="5dp"
            card_view:cardCornerRadius="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/review_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/review_intro"
                    android:textColor="@color/onBackground"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/username_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_below="@id/review_intro"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/onBackground"
                        android:textSize="18sp"
                        android:text="@string/review_to" />

                    <TextView
                        android:id="@+id/write_review_reviewed_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="😋helloimcarmine"
                        android:textColor="@color/accent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/onBackground"
                        android:textSize="18sp"
                        android:text="@string/review_for" />
                </LinearLayout>

                    <TextView
                        android:id="@+id/write_review_book_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/username_row"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="2"
                        android:text="Il meraviglioso mondo di Amelie"
                        android:textColor="@color/onBackground"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                <EditText
                    android:id="@+id/write_review_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/write_review_rating"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/review_comment"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="1"
                    android:scrollbars="vertical" />


                <RatingBar
                    android:id="@+id/write_review_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/write_review_confirm"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="bottom"
                    android:layout_marginVertical="10dp"
                    android:numStars="5"
                    android:rating="2"
                    android:stepSize="0.5" />

                <Button
                    android:id="@+id/write_review_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_corner_button"
                    android:text="✅"
                    android:textColor="@color/white" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    >

</FrameLayout>